# docx-replace-attach

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
docx_attach/: __init__.py  docx_attachment.py
test/: excel_attachment.xlsx  template.docx  test.py  word_attachment.docx
